--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         </span>
                     </div>
                     <div class="work__gallery--card">
-                        <img src="img/dice_game.png" alt="Color guessing game" class="work__gallery--img">
+                        <img src="img/dice_game.png" alt="Dice game" class="work__gallery--img">
                         <h3 class="work__gallery--title">Dice game</h3>
                         <p class="work__gallery--content">
                             Game for two playes.<br><br> JavaScript
