--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </p>
                 <div class="work__gallery">
                     <div class="work__gallery--card">
-                        <img src="img/weather.png" alt="World weather" class="work__gallery--img">
+                        <img src="img/weather.png" alt="World weather" class="work__gallery--img" loading="lazy">
                         <h3 class="work__gallery--title">World Weather</h3>
                         <p class="work__gallery--content">
                             Weather conditions and 7 day forecast with Openweathermap API<br><br> JavaScript, PHP, MySQL
@@ -109,7 +109,7 @@
                         </div>
                     </div>
                     <div class="work__gallery--card">
-                        <img src="img/quiz.png" alt="Quick Quiz" class="work__gallery--img">
+                        <img src="img/quiz.png" alt="Quick Quiz" class="work__gallery--img" loading="lazy">
                         <h3 class="work__gallery--title">Quick Quiz</h3>
                         <p class="work__gallery--content">
                             Simple quiz, questions are loaded via API from Open Trivia DB.<br><br> JavaScript
@@ -121,7 +121,7 @@
                         </span>
                     </div>
                     <div class="work__gallery--card">
-                        <img src="img/colorgame.png" alt="Color guessing game" class="work__gallery--img">
+                        <img src="img/colorgame.png" alt="Color guessing game" class="work__gallery--img" loading="lazy">
                         <h3 class="work__gallery--title">Color guessing game</h3>
                         <p class="work__gallery--content">
                             Guess color from RGB values.<br><br> JavaScript
@@ -133,7 +133,7 @@
                         </span>
                     </div>
                     <div class="work__gallery--card">
-                        <img src="img/dice_game.png" alt="Dice game" class="work__gallery--img">
+                        <img src="img/dice_game.png" alt="Dice game" class="work__gallery--img" loading="lazy">
                         <h3 class="work__gallery--title">Dice game</h3>
                         <p class="work__gallery--content">
                             Game for two playes.<br><br> JavaScript
@@ -145,7 +145,7 @@
                         </span>
                     </div>
                     <div class="work__gallery--card">
-                        <img src="img/newyear.png" alt="Happy New Year" class="work__gallery--img">
+                        <img src="img/newyear.png" alt="Happy New Year" class="work__gallery--img" loading="lazy">
                         <h3 class="work__gallery--title">Happy New Year</h3>
                         <p class="work__gallery--content">
                             Animated New Year greeting card.<br><br> jQuery
@@ -157,7 +157,7 @@
                         </span>
                     </div>
                     <div class="work__gallery--card">
-                        <img src="img/christmas.png" alt="Merry Christmas" class="work__gallery--img">
+                        <img src="img/christmas.png" alt="Merry Christmas" class="work__gallery--img" loading="lazy">
                         <h3 class="work__gallery--title">Merry Christmas</h3>
                         <p class="work__gallery--content">
                             Animated Christmas greeting card.<br><br> jQuery
