--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                     </h2>
                     <div class="about__content">
                         <p>
-                            When you're passionate about programming, you learn and discover new things almost every day.
-                            <br> I enjoy learning about web development (html, CSS, JavaScript, PHP...), and responsive, mobile first web design concepts.
+                            I enjoy learning about web development (html, CSS, JavaScript, PHP...), and responsive, mobile first web design concepts.
                         </p>
+                        <br>
                         <p>
                             You can contact me on
                             <span class="about__btn">
@@ -74,6 +74,14 @@
                                     dario@dario-web.tech
                                 </a>
                             </span>
+                        </p>
+                        <br>
+                        <p>
+                            And look at some of my work at my
+                            <span class="about__btn">
+                            <a href="https://github.com/DacOsk">GitHub</a>
+                            </span> page
+
                         </p>
                     </div>
                 </div>
@@ -90,14 +98,14 @@
                 </p>
                 <div class="work__gallery">
                     <div class="work__gallery--card">
-                        <img src="img/weather.png" alt="World weather" class="work__gallery--img" loading="lazy">
+                        <img src="img/weather.png" alt="World weather" class="work__gallery--img">
                         <h3 class="work__gallery--title">World Weather</h3>
                         <p class="work__gallery--content">
                             Weather conditions and 7 day forecast with Openweathermap API<br><br> JavaScript, PHP, MySQL
                         </p>
                         <div class="work__gallery--btn-container">
                             <span class="work__gallery--btn">
-                            <a href="http://www.dario-web.tech/portfolio/weather/index.php" target="_blank">
+                            <a href="portfolio/weather/index.php" target="_blank">
                                 Try it!
                             </a>
                             </span>
@@ -109,61 +117,61 @@
                         </div>
                     </div>
                     <div class="work__gallery--card">
-                        <img src="img/quiz.png" alt="Quick Quiz" class="work__gallery--img" loading="lazy">
+                        <img src="img/quiz.png" alt="Quick Quiz" class="work__gallery--img">
                         <h3 class="work__gallery--title">Quick Quiz</h3>
                         <p class="work__gallery--content">
                             Simple quiz, questions are loaded via API from Open Trivia DB.<br><br> JavaScript
                         </p>
                         <span class="work__gallery--btn">
-                            <a href="http://www.dario-web.tech/portfolio/quiz-api/index.html" target="_blank">
+                            <a href="portfolio/quiz-api/index.html" target="_blank">
                                 Try it!
                             </a>
                         </span>
                     </div>
                     <div class="work__gallery--card">
-                        <img src="img/colorgame.png" alt="Color guessing game" class="work__gallery--img" loading="lazy">
+                        <img src="img/colorgame.png" alt="Color guessing game" class="work__gallery--img">
                         <h3 class="work__gallery--title">Color guessing game</h3>
                         <p class="work__gallery--content">
                             Guess color from RGB values.<br><br> JavaScript
                         </p>
                         <span class="work__gallery--btn">
-                            <a href="http://www.dario-web.tech/portfolio/colorgame/index.html" target="_blank">
+                            <a href="portfolio/colorgame/index.html" target="_blank">
                                 Try it!
                             </a>
                         </span>
                     </div>
                     <div class="work__gallery--card">
-                        <img src="img/dice_game.png" alt="Dice game" class="work__gallery--img" loading="lazy">
+                        <img src="img/dice_game.png" alt="Color guessing game" class="work__gallery--img">
                         <h3 class="work__gallery--title">Dice game</h3>
                         <p class="work__gallery--content">
                             Game for two playes.<br><br> JavaScript
                         </p>
                         <span class="work__gallery--btn">
-                            <a href="http://www.dario-web.tech/portfolio/dice_game/index.html" target="_blank">
+                            <a href="portfolio/dice_game/index.html" target="_blank">
                                 Try it!
                             </a>
                         </span>
                     </div>
                     <div class="work__gallery--card">
-                        <img src="img/newyear.png" alt="Happy New Year" class="work__gallery--img" loading="lazy">
+                        <img src="img/newyear.png" alt="Happy New Year" class="work__gallery--img">
                         <h3 class="work__gallery--title">Happy New Year</h3>
                         <p class="work__gallery--content">
                             Animated New Year greeting card.<br><br> jQuery
                         </p>
                         <span class="work__gallery--btn">
-                            <a href="http://www.dario-web.tech/portfolio/newyear.html" target="_blank">
+                            <a href="portfolio/newyear.html" target="_blank">
                                 Try it!
                             </a>
                         </span>
                     </div>
                     <div class="work__gallery--card">
-                        <img src="img/christmas.png" alt="Merry Christmas" class="work__gallery--img" loading="lazy">
+                        <img src="img/christmas.png" alt="Merry Christmas" class="work__gallery--img">
                         <h3 class="work__gallery--title">Merry Christmas</h3>
                         <p class="work__gallery--content">
                             Animated Christmas greeting card.<br><br> jQuery
                         </p>
                         <span class="work__gallery--btn">
-                            <a href="http://www.dario-web.tech/portfolio/christmas.html" target="_blank">
+                            <a href="portfolio/christmas.html" target="_blank">
                                 Try it!
                             </a>
                         </span>
