--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <p>
                             And look at some of my work at my
                             <span class="about__btn">
-                            <a href="https://github.com/DacOsk">GitHub</a>
+                            <a href="https://github.com/DacOsk" target="_blank">GitHub</a>
                             </span> page
 
                         </p>
