--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         </p>
                         <div class="work__gallery--btn-container">
                             <span class="work__gallery--btn">
-                            <a href="portfolio/weather/index.php" target="_blank">
+                            <a href="http://www.dario-web.tech/portfolio/weather/index.php" target="_blank">
                                 Try it!
                             </a>
                             </span>
@@ -123,7 +123,7 @@
                             Simple quiz, questions are loaded via API from Open Trivia DB.<br><br> JavaScript
                         </p>
                         <span class="work__gallery--btn">
-                            <a href="portfolio/quiz-api/index.html" target="_blank">
+                            <a href="http://www.dario-web.tech/portfolio/quiz-api/index.html" target="_blank">
                                 Try it!
                             </a>
                         </span>
@@ -135,7 +135,7 @@
                             Guess color from RGB values.<br><br> JavaScript
                         </p>
                         <span class="work__gallery--btn">
-                            <a href="portfolio/colorgame/index.html" target="_blank">
+                            <a href="http://www.dario-web.tech/portfolio/colorgame/index.html" target="_blank">
                                 Try it!
                             </a>
                         </span>
@@ -147,7 +147,7 @@
                             Game for two playes.<br><br> JavaScript
                         </p>
                         <span class="work__gallery--btn">
-                            <a href="portfolio/dice_game/index.html" target="_blank">
+                            <a href="http://www.dario-web.tech/portfolio/dice_game/index.html" target="_blank">
                                 Try it!
                             </a>
                         </span>
@@ -159,7 +159,7 @@
                             Animated New Year greeting card.<br><br> jQuery
                         </p>
                         <span class="work__gallery--btn">
-                            <a href="portfolio/newyear.html" target="_blank">
+                            <a href="http://www.dario-web.tech/portfolio/newyear.html" target="_blank">
                                 Try it!
                             </a>
                         </span>
@@ -171,7 +171,7 @@
                             Animated Christmas greeting card.<br><br> jQuery
                         </p>
                         <span class="work__gallery--btn">
-                            <a href="portfolio/christmas.html" target="_blank">
+                            <a href="http://www.dario-web.tech/portfolio/christmas.html" target="_blank">
                                 Try it!
                             </a>
                         </span>
