--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                         <p>
                             You can contact me on
                             <span class="about__btn">
-                                <a href="mailto:dario@dario-web.tech">
-                                    dario@dario-web.tech
+                                <a href="mailto:darios000@gmail.com">
+                                    darios000@gmail.com
                                 </a>
                             </span>
                         </p>
@@ -104,11 +104,11 @@
                             Weather conditions and 7 day forecast with Openweathermap API<br><br> JavaScript, PHP, MySQL
                         </p>
                         <div class="work__gallery--btn-container">
-                            <span class="work__gallery--btn">
+                            <!-- <span class="work__gallery--btn">
                             <a href="http://www.dario-web.tech/portfolio/weather/index.php" target="_blank">
                                 Try it!
                             </a>
-                            </span>
+                            </span> -->
                             <span class="work__gallery--btn">
                                 <a href="https://github.com/DacOsk/World-weather" target="_blank">
                                     GitHub repo
@@ -123,7 +123,7 @@
                             Simple quiz, questions are loaded via API from Open Trivia DB.<br><br> JavaScript
                         </p>
                         <span class="work__gallery--btn">
-                            <a href="http://www.dario-web.tech/portfolio/quiz-api/index.html" target="_blank">
+                            <a href="/portfolio/quiz-api/index.html" target="_blank">
                                 Try it!
                             </a>
                         </span>
@@ -135,7 +135,7 @@
                             Guess color from RGB values.<br><br> JavaScript
                         </p>
                         <span class="work__gallery--btn">
-                            <a href="http://www.dario-web.tech/portfolio/colorgame/index.html" target="_blank">
+                            <a href="/portfolio/colorgame/index.html" target="_blank">
                                 Try it!
                             </a>
                         </span>
@@ -147,7 +147,7 @@
                             Game for two playes.<br><br> JavaScript
                         </p>
                         <span class="work__gallery--btn">
-                            <a href="http://www.dario-web.tech/portfolio/dice_game/index.html" target="_blank">
+                            <a href="/portfolio/dice_game/index.html" target="_blank">
                                 Try it!
                             </a>
                         </span>
@@ -159,7 +159,7 @@
                             Animated New Year greeting card.<br><br> jQuery
                         </p>
                         <span class="work__gallery--btn">
-                            <a href="http://www.dario-web.tech/portfolio/newyear.html" target="_blank">
+                            <a href="/portfolio/holidays/newyear.html" target="_blank">
                                 Try it!
                             </a>
                         </span>
@@ -171,7 +171,7 @@
                             Animated Christmas greeting card.<br><br> jQuery
                         </p>
                         <span class="work__gallery--btn">
-                            <a href="http://www.dario-web.tech/portfolio/christmas.html" target="_blank">
+                            <a href="/portfolio/holidays/christmas.html" target="_blank">
                                 Try it!
                             </a>
                         </span>
@@ -189,7 +189,7 @@
 
     <footer class="footer">
         <span class="footer__logo">
-            &copy;2020 
+            &copy;2020
             <a href="index.html">dario-WEB.tech</a>
         </span>
         <ul class="footer__list">
@@ -214,7 +214,7 @@
                 </a>
             </li>
             <li class="footer__item">
-                <a href="mailto:dario@dario-web.tech" class="footer__link" title="e-mail">
+                <a href="mailto:darios000@gmail.com" class="footer__link" title="e-mail">
                     <i class="fas fa-at"></i>
                 </a>
             </li>
