--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     <footer class="footer">
         <span class="footer__logo">
             &copy;2020
-            <a href="index.html">dario-WEB.tech</a>
+            <a href="index.html">DacOsk</a>
         </span>
         <ul class="footer__list">
             <li class="footer__item">
